src/objects/CventEvents__Attendee__c.object
<CustomObject>
    <description>Represents the attendee of an event.</description>
    <fields>
        <fullName>CventEvents__AdmissionItem__c</fullName>
        <label>Admission Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__AmountOrdered__c</fullName>
        <label>Amount Ordered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__AmountPaid__c</fullName>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__Attended__c</fullName>
        <description>Represents whether the Attendee participated Event or not.</description>
        <label>Attended</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__AttendeeName__c</fullName>
        <formula>IF(ISBLANK(CventEvents__Lead__c),
        HYPERLINK(&quot;/&quot; &amp; CventEvents__Contact__r.FirstName + &quot; &quot; + CventEvents__Contact__r.LastName, &quot;&quot;)
        &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Contact__c, CventEvents__Contact__r.FirstName + &quot; &quot; + CventEvents__Contact__r.LastName),
        HYPERLINK(&quot;/&quot; &amp; CventEvents__Lead__r.FirstName + &quot; &quot; + CventEvents__Lead__r.LastName, &quot;&quot;)
        &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Lead__c, CventEvents__Lead__r.FirstName + &quot; &quot; + CventEvents__Lead__r.LastName))</formula>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__AttendeeStub__c</fullName>
        <externalId>true</externalId>
        <label>Attendee Stub</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__AttendingFormat__c</fullName>
        <label>Attendee Format</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__BalanceDue__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CventEvents__Company__c</fullName>
        <description>Represents either the related contact&apos;s account name or lead&apos;s company.</description>
        <formula>IF(ISBLANK(CventEvents__Lead__c), CventEvents__Contact__r.Account.Name, CventEvents__Lead__r.Company)</formula>
        <inlineHelpText>Represents either the related contact&apos;s account name or lead&apos;s company.</inlineHelpText>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__ConfirmationNumber__c</fullName>
        <label>Confirmation Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Events Participation</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__CurrencyCode__c</fullName>
        <formula>CventEvents__Event__r.CventEvents__pkg_CurrencyCode__c</formula>
        <label>Currency Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__CurrencyName__c</fullName>
        <formula>CventEvents__Event__r.CventEvents__pkg_CurrencyName__c</formula>
        <label>Currency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Email__c</fullName>
        <formula>IF(ISBLANK(CventEvents__Lead__c), CventEvents__Contact__r.Email, CventEvents__Lead__r.Email)</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventCheckInDate__c</fullName>
        <label>Event Check-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventStartDate__c</fullName>
        <formula>CventEvents__Event__r.CventEvents__pkg_StartDate__c</formula>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventStartTime__c</fullName>
        <formula>CventEvents__Event__r.CventEvents__pkg_StartTime__c</formula>
        <label>Event Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventTimeZone__c</fullName>
        <formula>CventEvents__Event__r.CventEvents__pkg_TimeZone__c</formula>
        <label>Event Time Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__EventTitle__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; CventEvents__Event__r.CventEvents__pkg_Title__c, &quot;&quot;) &amp; HYPERLINK(&quot;/&quot; &amp; CventEvents__Event__c, CventEvents__Event__r.CventEvents__pkg_Title__c)</formula>
        <label>Event</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Number</label>
        <referenceTo>CventEvents__Event__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__GroupConfirmationNumber__c</fullName>
        <label>Group Confirmation Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__InternalNote__c</fullName>
        <label>Internal Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsFreeloader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Represents whether the Attendee is guest or not.</description>
        <label>Guest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__IsGroupLeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CventEvents__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Events Participation</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__MatchScenario__c</fullName>
        <description>Stores the record matching scenario which had been applied during matching with the Salesforce Contact/Lead.</description>
        <inlineHelpText>Stores the record matching scenario which had been applied during matching with the Salesforce Contact/Lead.</inlineHelpText>
        <label>Match Scenario</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Match</fullName>
                </value>
                <value>
                    <fullName>Single Match</fullName>
                </value>
                <value>
                    <fullName>Multiple Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__OpportunityBindings__c</fullName>
        <description>Stores the serialized map of opportunity configuration Id to the Id of opportunity created by this configuration.</description>
        <label>Opportunity Bindings</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CventEvents__PrimaryRegistrantName__c</fullName>
        <formula>IF(ISBLANK(CventEvents__PrimaryRegistrant__c), null, CventEvents__PrimaryRegistrant__r.CventEvents__AttendeeName__c)</formula>
        <label>Primary Registrant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__PrimaryRegistrant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Registrant Number</label>
        <referenceTo>CventEvents__Attendee__c</referenceTo>
        <relationshipLabel>Guests</relationshipLabel>
        <relationshipName>Guests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__ReferenceId__c</fullName>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RegistrationDate__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CventEvents__RegistrationPathId__c</fullName>
        <label>Registration Path Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RegistrationPathName__c</fullName>
        <label>Registration Path</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RegistrationType__c</fullName>
        <label>Registration Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__RespondedThrough__c</fullName>
        <label>Responded Through</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Visited</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Denied Approval</fullName>
                </value>
                <value>
                    <fullName>Invitation Not Sent</fullName>
                </value>
                <value>
                    <fullName>Invitation Pending</fullName>
                </value>
                <value>
                    <fullName>Nomination Pending</fullName>
                </value>
                <value>
                    <fullName>Nomination Approved</fullName>
                </value>
                <value>
                    <fullName>Nomination Denied</fullName>
                </value>
                <value>
                    <fullName>Nomination Cancelled</fullName>
                </value>
                <value>
                    <fullName>Substituted</fullName>
                </value>
                <value>
                    <fullName>Registration Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CventEvents__SubstitutionName__c</fullName>
        <formula>IF(ISBLANK(CventEvents__Substitution__c), null, CventEvents__Substitution__r.CventEvents__AttendeeName__c)</formula>
        <label>Substitution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CventEvents__Substitution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Substitution Number</label>
        <referenceTo>CventEvents__Attendee__c</referenceTo>
        <relationshipLabel>Substituted Attendees</relationshipLabel>
        <relationshipName>SubstitutedAttendees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CventEvents__UnsubscribedFromEvent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unsubscribed From Event</label>
        <type>Checkbox</type>
    </fields>
    <label>Attendee</label>
    <listViews>
        <fullName>CVENT_Attendees_with_Profisee_ID</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>CVENT Attendees with Profisee ID</label>
    </listViews>
    <listViews>
        <fullName>CventEvents__All</fullName>
        <columns>NAME</columns>
        <columns>CventEvents__AttendeeName__c</columns>
        <columns>CventEvents__RegistrationType__c</columns>
        <columns>CventEvents__Email__c</columns>
        <columns>CventEvents__Company__c</columns>
        <columns>CventEvents__EventTitle__c</columns>
        <columns>CventEvents__Status__c</columns>
        <columns>CventEvents__Attended__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Attendee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>